--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "node-fetch": "^1.6.3",
+    "node-wit": "^4.2.0",
     "request": "^2.79.0"
   }
 }
